--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "deploy": "node contracts/deploy.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,7 +11,9 @@
   },
   "dependencies": {
     "bulma": "^0.9.1",
+    "ethjs-provider-signer": "^0.1.4",
     "firebase": "^7.23.0",
+    "fs": "^0.0.1-security",
     "next": "9.5.4",
     "node-sass": "^4.14.1",
     "re-base": "^4.0.0",
